--- a/Labs/lab4/style.css
+++ b/Labs/lab4/style.css
@@ -1,8 +1,8 @@
+
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -14,9 +14,88 @@
   .container {
     padding: 2px 16px;
   }
-
   
-  /* Add rounded corners to the top left and the top right corner of the image */
-  img {
-    border-radius: 5px 5px 0 0;
-  }
+h1 { 
+    color: #CEF0D4; 
+    font-family: 'Rouge Script', cursive;
+    font-size: 100px; 
+    font-weight: normal; 
+    line-height: 48px; 
+    margin: 0 0 50px; 
+    text-align: center; 
+    text-shadow: 1px 1px 2px #082b34; 
+}
+
+body{
+    text-align: center;
+    background-color: #dfebe8;
+}
+
+
+#contenedor { 
+    color: #a7e8f8; 
+    font-family: 'Julius Sans One', sans-serif; 
+    font-size: 22px; 
+    font-weight: bold; 
+    line-height: 32px;
+    width: 300px;
+    border: 15px solid green;
+    padding: 50px;
+    margin: 20px;
+    text-shadow: 1px 1px 1px #082b34;
+    text-align: center; 
+    display: inline-block;
+    }
+
+
+button { color: #013613; 
+    font-family: 'Carme', sans-serif; 
+    font-size: 16px; 
+    line-height: 24px;
+     margin: 0 0 24px; 
+    }
+
+
+a { color: #CEF0D4; 
+    text-decoration: underline; 
+}
+
+
+a:hover { color: #a7e8f8;
+    text-decoration: underline; 
+}
+#resultado{
+	background: #a7e8f8;
+	color: #fff;
+	border-color: #54b268;
+	animation: tiendaNew 2.72s ease infinite;
+	transform-origin: 50% 50%;
+	-webkit-transition: 0.5s ease-out;
+	-moz-transition: 0.5s ease-out;
+	-o-transition: 0.5s ease-out;
+	transition: 0.5s ease-out;
+	text-align: center;
+	font-size: 13px;
+	padding: 10px;
+	margin-bottom: 15px;
+	clear: both;
+	display: block;
+	width: 100%;
+	-webkit-border-radius: 6px;
+	-moz-border-radis: 6px;
+	border-radius: 6px;
+}
+@keyframes resultado{
+	0% { transform:translate(0,0) }
+	4.41177% { transform:translate(5px,0) }
+	8.82353% { transform:translate(0,0) }
+	13.23529% { transform:translate(5px,0) }
+	17.64706% { transform:translate(0,0) }
+	22.05882% { transform:translate(5px,0) }
+	26.47059% { transform:translate(0,0) }
+	100% { transform:translate(0,0) }
+}
+#resultado:hover{
+	background:#969696;
+	color: #fff;
+}
